Add existing project files to Git

--- a/Server/.env
+++ b/Server/.env
@@ -1,1 +1,3 @@
 DB_URI= mongodb+srv://mdkaif:Kaif1234@cluster0.pwghvi0.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+EMAIL_USER=mkaif0262@gmail.com
+EMAIL_PASS=pijklsjzbkuzqasx
